--- a/package.json
+++ b/package.json
@@ -13,9 +13,18 @@
   "license": "ISC",
   "devDependencies": {
     "babel": "^6.23.0",
+    "babel-core": "^6.23.1",
     "babel-loader": "^6.4.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "css-loader": "^0.26.4",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "modernizr-webpack-plugin": "^1.0.5",
+    "postcss-loader": "^1.3.3",
+    "postcss-scss": "^0.4.1",
+    "postcss-smart-import": "^0.6.9",
+    "precss": "^1.4.0",
+    "style-loader": "^0.13.2",
     "webpack": "^2.2.1"
   }
 }
