--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "affinity-mortgage",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "middleman server",
@@ -10,7 +9,7 @@
   },
   "keywords": [],
   "author": "Jon Wheeler",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.23.1",
